# modules

./: .gitignore  Cargo.toml
.github/workflows/: commit.yml
dynamic/rust/egress_policies/: Cargo.toml  README.md
dynamic/rust/egress_policies/src/: dns_gateway.rs  hostname_lookup.rs  lib.rs  virtual_ip_cache.rs
integration/: integration.sh
integration/egress_policies/: docker-compose.yaml  envoy.yaml  verify.py
