[package]
name = "envoy-proxy-dynamic-modules-rust-egress-policies"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/envoyproxy/modules"

[dependencies]
# The SDK version must match the Envoy version due to the strict compatibility requirements.
envoy-proxy-dynamic-modules-rust-sdk = { git = "https://github.com/envoyproxy/envoy", rev = "6d9bb7d9a85d616b220d1f8fe67b61f82bbdb8d3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.0"
matchers = "0.2.0"
dashmap = "6.1.0"
once_cell = "1.20.2"
hickory-proto = "0.24"
parking_lot = "0.12"

[lib]
name = "rust_module"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
